--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,8 +29,8 @@
         <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>
       {% endif %}
       {% if site.show_downloads %}
-        <a href="http://adsabs.harvard.edu/cgi-bin/nph-abs_connect?return_req=no_params&author=Justesen,%20A.%20B.&sort=NDATE" class="btn">See papers on ADS</a>
-        <a href="{{ site.github.tar_url }}" class="btn">Download .tar.gz</a>
+        <a href="http://adsabs.harvard.edu/cgi-bin/nph-abs_connect?return_req=no_params&author=Justesen,%20A.%20B.&sort=NDATE" target="_blank" class="btn">My papers on ADS</a>
+        <a href="https://pure.au.dk/portal/en/persons/anders-bo-justesen(6ba20a47-b77b-4875-bef1-6352090aa7f7).html" target="_blank" class="btn">My university profile</a>
       {% endif %}
     </header>
 
