--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,7 @@
         <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>
       {% endif %}
       {% if site.show_downloads %}
-        <a href="http://adsabs.harvard.edu/cgi-bin/nph-abs_connect?return_req=no_params&author=Justesen,%20A.%20B.&sort=NDATE" target="_blank" class="btn">My papers on ADS</a>
+        <a href="https://ui.adsabs.harvard.edu/search/p_=0&q=orcid%3A%220000-0002-0174-2466%22&sort=date%20desc%2C%20bibcode%20desc" target="_blank" class="btn">My papers on ADS</a>
         <a href="https://pure.au.dk/portal/en/persons/anders-bo-justesen(6ba20a47-b77b-4875-bef1-6352090aa7f7).html" target="_blank" class="btn">My university profile</a>
       {% endif %}
     </header>
